tests/baselines/reference/templateStringUnterminated2_ES6.errors.txt
templateStringUnterminated2_ES6.ts(1,4): error TS1160: Unterminated template literal.


==== templateStringUnterminated2_ES6.ts (1 errors) ====
    `\`
       
!!! error TS1160: Unterminated template literal.